--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,13 @@
 {
   "presets": [
-    "@babel/preset-env",
     [
-      "@babel/preset-react",
+      "@babel/preset-env",
       {
-        "runtime": "automatic"
+        "targets": {
+          "esmodules": true
+        }
       }
-    ]
+    ],
+    "@babel/preset-react"
   ]
 }
